# post_rejections_idx

./: .gitignore  Process Overview.drawio  README.md  dev.ipynb  example.env  main.py  pyproject.toml  run_main.bat
docs/: Process Overview.drawio
pages/: login_page.py  open_settings.py  open_vtb.py  post_rejection.py  pp_batch.py  pp_select_patient.py
pages/modals/: batch_modal.py  payment_code.py  reset_modal.py
pages/post_receipts/: post_dropdown.py  pp_bulk.py  pp_lipp.py  pp_lipp_rejections.py  pp_main.py
tests/: test_login_workflow.py  test_workflow.py
utils/: database.py  file_reader.py  log_cleanup.py  notify.py  screenshot.py
