[project]
name = "post-rejections-idx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "selenium>=4.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
